@@ -37,6 +37,8 @@ BUGFIXES FROM 1.1
   OptimisticMapWrapper.copyChangesToConcurrentTransactions() for preventing ConcurrentModificationException.
 - Fixed bugzilla issue 37379. The construction of the transaction specific path is now done via a TransactionIdToPathMapper.
 - Fixed issue with deleteResource(..) and createResource(..) of FileResourceManager seen as read-only operations.
+- Fixed issue with AbstractXAResource. Resources did not get released when prepare(..) returns XA_RDONLY as no
+  commit(..) is triggered by the TransactionManager explicitely.
 
 KNOWN ISSUES
 ------------
